internal/builder/testdata/single/host/basic/exact.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: exact-host-demo
spec:
  rules:
    - host: example.host.com
      http:
        paths:
          - path: /foo
            pathType: Exact
            backend:
              serviceName: service1
              servicePort: 80
